# CGC

./: .gitignore  CMakeLists.txt  Plot.pro  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
components/color_label/: color_label.cpp  color_label.hpp
components/draw_label/: draw_label.cpp  draw_label.hpp
components/function_table_widget/: function_table_widget.cpp  function_table_widget.hpp
components/grid_widget/: grid_widget.cpp  grid_widget.hpp  grid_widget.ui
doc/: 00-title.tex  02-intro.tex  10-analysis.tex  20-design.tex  30-impl.tex  40-research.tex  50-conclusion.tex  51-biblio.bib  preamble.inc.tex  report.tex
doc/inc/csv/: polygons.csv  threads.csv
doc/inc/img/: uml.mdj  zg.graphml
doc/other stuff/: Презентация.pptx  ТЗ.doc  Титул.doc
exprtk/: exprtk.hpp
function/expression/: expression.cpp  expression.hpp
function/function/: function.hpp
function/function_parser/: function_parser.cpp  function_parser.hpp
math/expression/: expression.hpp
math/function/: funciton.cpp  function.hpp
math/function_parser/: function_parser.hpp
math/global/: global.hpp
math/grid/: grid.hpp
math/matrix/: matrix.hpp  matrix4x4.hpp  rectangular_matrix.hpp
math/range/: range.cpp  range.hpp
math/region/: region.hpp
math/surface/: surface.cpp  surface.hpp
math/transformation/: dimensional_transformations.cpp  dimensional_transformations.hpp  transformation.cpp  transformation.hpp  transformation_interface.cpp  transformation_interface.hpp
math/vector/: homogeneous_vector3d.hpp  vector.hpp  vector3d.hpp
object/camera/: camera.cpp  camera.hpp
object/edge/: edge.cpp  edge.hpp
object/face/: face.hpp  face3.hpp  triangle_face.hpp
object/mesh/: mesh.hpp
object/triangle/: triangle.hpp
object/vertex/: vertex.cpp  vertex.hpp
render/cascade_renderer/: cascade_renderer.cpp  cascade_renderer.hpp
render/solid_renderer/: solid_renderer.cpp  solid_renderer.hpp
scene/: scene.hpp
surface/: surface.cpp  surface.hpp
